--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -73,6 +73,12 @@
             <version>0.8</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>5.4.2.201908231537-r</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
